--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
     "react-google-charts": "^3.0.15",
+    "react-loader-spinner": "^3.1.14",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
   },
